--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myquiz",
-  "homepage": "https://fivetoten-quiz.github.io/quiz",
+  "homepage": "https://fivetoten-quiz.github.io/quiz/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
